Favicon praficar bonitinho

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
         .progress { height: 20px; font-size: 0.8rem; }
         .details-list-group-item { background-color: #f8f9fa; border-color: rgba(0,0,0,0.05); }
     </style>
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/774/774134.png" type="image/x-icon">
 </head>
 <body>
 
