Adição de Painel SuperAdmin, ainda falta ajustes de cor e lógica

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,6 +47,9 @@
                 </div>
             </div>
             <div>
+                {% if session.role == 'superadmin' %}
+                    <a href="{{ url_for('superadmin.dashboard') }}" class="btn btn-danger">Dashboard Superadmin</a>
+                {% endif %}
                 <a href="{{ url_for('user.user_panel') }}" class="btn btn-info">Usuários</a>
                 <a href="{{ url_for('auth.logout') }}" class="btn btn-danger ms-2">Sair</a>
             </div>
